--- a/index.html
+++ b/index.html
@@ -224,6 +224,24 @@
                     <!-- End .project-info -->
                 </div>
                 <!-- End .project -->
+		
+		<div class="project shadow-large">
+                    <div class="project-image">
+                        <img src="images/bozicnaSlika.png" width="300"/>
+                    </div>
+                    <!-- End .project-image -->
+                    <div class="project-info">
+                        <h3>Christmas/Easter postcard game</h3>
+                        <p>
+                           This is the game I made for large scale companies. They can send this game to their clients and have a 
+			   fresh and original way to congratulate Christmas and Easter to their loyal customers. Around the map there
+			   are a bunch of billboard where their logo will be. So customers when playing the game can see the provider
+			   company name.
+                        </p>
+                    </div>
+                    <!-- End .project-info -->
+                </div>
+                <!-- End .project -->
 
 
                 <div class="project shadow-large">
