--- a/index.html
+++ b/index.html
@@ -235,8 +235,8 @@
                         <p>
                            This is the game I made for large scale companies. They can send this game to their clients and have a 
 			   fresh and original way to congratulate Christmas and Easter to their loyal customers. Around the map there
-			   are a bunch of billboard where their logo will be. So customers when playing the game can see the provider
-			   company name.
+			   are a bunch of billboards where their logo will be. So when customers are playing the game they can see the
+			   providers company name.
                         </p>
                     </div>
                     <!-- End .project-info -->
