--- a/index.html
+++ b/index.html
@@ -356,17 +356,18 @@
 	       
 	        <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/lightfallImage.jpg" width="300" height ="300"/>
+                        <img src="images/scuffedSouls.jpg" width="300" height ="300"/>
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
-                        <h3>Lightfall</h3>
+                        <h3>Scuffed souls</h3>
                         <p>
-                       	This game is FPS and TPS, it will have PVE and PVP aspects of the game. It will be open world. I got inspired from
-			Destiny 2 and Warframe. This is a project fully developed and made by me. I am still working on it and I'm thinking 
-			of only makeing a demo because I can't develope a full game without the custom made assets. 
+                       	I came up with this game idea after I found a great asset that had the animation for sword combat. I made the whole level
+			and the atmosphere, my main focus was on learning how to implement a good atmosphere and graphics. Combat is simple and
+			straightforward. In this project I would say that I learned ins and out of Unity animation system, now I have no problems
+			with implementing animations.
                         </p>
-                        <h4><p>Work in progress</p></h4>
+                        <a href="https://waldee.itch.io/scuffedsouls">View Project</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
@@ -384,7 +385,6 @@
             <li>Unity</li>
             <li>VR</li>
             <li>AR</li>
-	    <li>Shaders</li>
 	    <li>Github</li>
 	    <li>Apps</li>
             <li>HTML</li>
