added new project
Added new project and fixed grammar mistakes

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 		  <h3><a href="https://inkubator-pismo.eu/">Inkubator PISMO ltd.</a></h3>
                 <h4>Game developer</h4>
                 <p>
-                 Development of games & apps from start to finish, productions of AR and VR.
+                 Production, development and publishing of games, apps, VR & AR projects from start to finish.
 		</p>	
             </div>		
 	    </div>
