--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     </div>-->
             <h1>Krešimir Patrik Kućan</h1>
             <h2>Game developer</h2>
-            <a href="pages/kucanResume.pdf" class="btn-rounded-white">Download Resume</a>
+            <a href="pages/KucanResume.pdf" class="btn-rounded-white">Download Resume</a>
         </div>
         <!-- End #lead-content -->
 
