--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@
 	       
 	        <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/scuffedSouls.png" width="310"/>
+                        <img src="images/scuffedSouls.png" width="310" height="330"/>
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
