--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                         <img src="images/pfpBright.png" height="300" width="300" vspace ="25" hspace="900" border="10"/>
                     </div>-->
             <h1>Krešimir Patrik Kućan</h1>
-            <h2>Game developer</h2>
+            <h2>Game developer & C# programmer</h2>
             <a href="pages/KucanResume.pdf" class="btn-rounded-white">Download Resume</a>
         </div>
         <!-- End #lead-content -->
@@ -78,7 +78,7 @@
                 <div class="col-md-8">
                     <p>
                    I am 19 years old Unity game developer from Zagreb, Croatia. I've finished high school as a Computer technician and I have a background in coding and robotics.
-		   I've attended multiple competitions in robotics in high school and won first place in one of the competitions. I am very dedicated and I love learning new skills and expanding my knowledge in coding and other fields. My goal is to learn as much as possible so I can have a successful career. I would love to travel the world and explore my other passions. My current hobbies are gym, gaming and traveling.
+		   I've attended multiple competitions in robotics in high school and won first place in one of the competitions. I am very dedicated and I love learning new skills and expanding my knowledge in coding and other fields. Currently I am looking to change my career path from Game developer to Software engineer/developer or .NET developer. My goal is to learn as much as possible so I can have a successful career. I would love to travel the world and explore my other passions. My current hobbies are gym, gaming and traveling.
 
                     </p>
                 </div>
