--- a/index.html
+++ b/index.html
@@ -135,16 +135,16 @@
             <h4>Unity game developer</h4>
             <ul>
              <li>
-                    Programming in c # programming language
+                    Programming in C#
                 </li>
                 <li>
                     Advanced use of Unity development
                 </li>
                 <li>
-                    Proper making and writing of a video game concept
+                    Proper making and writing of a video game concepts
                 </li>
 		<li>
-                    Proper application of mathematical logic and the laws of physics in video games
+                    Proper application of mathematical logics and the laws of physics in video games
                 </li>
 		<li>
                     Organization and execution of a video game project
